# caspersect-ai

./: .gitignore  README.md  package-lock.json  package.json
backend/: .env.example  package-lock.json  package.json
backend/src/: index.ts
backend/src/routes/: agent.routes.ts  casper.routes.ts  risk.routes.ts
backend/src/services/: ai-agent.ts  casper-service.ts  risk-engine.ts
backend/tests/: risk-engine.test.ts
docs/: demo-video-script.md  hackathon-submission.md  testnet-deployment.md  validation.md
frontend/: .env.example  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Architecture.tsx  RiskScanner.tsx  WalletConnector.tsx
frontend/lib/: api.ts  casper-wallet.ts
frontend/types/: global.d.ts
pitch/: CasperSect-AI-Hackathon-Pitch.pptx
smart-contracts/scan-registry/: Cargo.toml  rust-toolchain.toml
smart-contracts/scan-registry-odra-old/: Cargo.toml
smart-contracts/scan-registry-odra-old/src/: lib.rs
smart-contracts/scan-registry-old/: Cargo.toml  README.md
smart-contracts/scan-registry-old/src/: lib.rs
smart-contracts/scan-registry/src/: lib.rs
