[package]
name = "caspersect-scan-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
odra = { version = "2.8.2", default-features = false }
odra-modules = { version = "2.8.2", default-features = false }

[dev-dependencies]
odra-test = "2.8.2"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []