[package]
name = "caspersect-scan-registry"
version = "0.1.0"
edition = "2021"

[dependencies]
casper-contract = "5.1.1"
casper-types = "6.1.0"
zeroize = "=1.8.1"
base64ct = "=1.6.0"

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true